manifests/mysql-deploy.yaml
# MySQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: student-result
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:8
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: initdb
          mountPath: "/docker-entrypoint-initdb.d"
      volumes:
      - name: initdb
        configMap:
          name: mysql-initdb-config
