manifests/student-result-deploy.yaml
# Java Application Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app
  namespace: student-result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-app
  template:
    metadata:
      labels:
        app: student-app
    spec:
      containers:
      - name: student-app
        image: ganesh1326/student-result:latest
        ports:
        - containerPort: 5050
