manifests/mysql-service.yaml
# MySQL Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: student-result
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
