manifests/student-result-svc.yaml
# Student-Result Application Service
apiVersion: v1
kind: Service
metadata:
  name: student-result-service
  namespace: student-result
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: student-app
