manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-result-ingress
  namespace: student-result
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: student-result.ganeshpaar.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-result-service
            port:
              number: 80
